class_name Voiceover
extends Node

@onready var barrel_too_heavy: AudioStreamPlayer = $BarrelTooHeavy
@onready var door_locked: AudioStreamPlayer = $DoorLocked
@onready var goodnight: AudioStreamPlayer = $Goodnight
@onready var hide: AudioStreamPlayer = $Hide
@onready var nice_drill: AudioStreamPlayer = $NiceDrill
@onready var praise_cheeseburger: AudioStreamPlayer = $PraiseTheCheeseburger
@onready var shovel: AudioStreamPlayer = $Shovel
@onready var quiet: AudioStreamPlayer = $StayQuiet
